feat/add-checkstyle (#213)
* remove `spring-javaformat` plugin and replace it with `checkstyle`

* remove `spring-javaformat` plugin and replace it with `checkstyle`

* remove `spring-javaformat` plugin and replace it with `checkstyle`

* manual imporvments

* add group

* remove `spring-javaformat` plugin and replace it with `checkstyle`

* manual imporvments

* manual imporvments

* manual imporvments

* remove `spring-javaformat` plugin and replace it with `checkstyle`

* manual imporvments

* manual imporvments

* manual imporvments

* manual imporvments

* manual imporvments

* manual imporvments

* manual improvements

* manual improvements

* manual improvements

* manual improvements

* manual improvements

* manual improvements

* manual imporvments

* manual imporvments