@@ -1,91 +1,57 @@
 package com.asrevo.cvhome.catalog.service.mapper.catalog.product;
 
+import java.util.Set;
+
+import org.springframework.stereotype.Component;
+
 import com.asrevo.cvhome.catalog.entity.product.variant.ProductVariant;
 import com.asrevo.cvhome.catalog.entity.product.variant.ProductVariantGroup;
-import com.asrevo.cvhome.catalog.entity.product.variant.ProductVariantImage;
-import com.asrevo.cvhome.catalog.model.product.ReadableImage;
 import com.asrevo.cvhome.catalog.model.product.product.variant.ReadableProductVariant;
 import com.asrevo.cvhome.catalog.model.product.product.variantGroup.ReadableProductVariantGroup;
 import com.asrevo.cvhome.commons.domain.StoreMerchantId;
-import com.asrevo.cvhome.store.core.entity.content.FileContentType;
 import com.asrevo.cvhome.store.core.mapper.Mapper;
 import com.asrevo.cvhome.store.core.model.reference.LanguageCode;
 import com.asrevo.cvhome.store.utils.ImageFilePath;
-import java.util.*;
-import java.util.stream.Collectors;
-import org.springframework.stereotype.Component;
-import org.springframework.util.Assert;
 
 @Component
 public class ReadableProductVariantGroupMapper implements Mapper<ProductVariantGroup, ReadableProductVariantGroup> {
 
-	private final ReadableProductVariantMapper readableProductVariantMapper;
+    private final ReadableProductVariantMapper readableProductVariantMapper;
 
-	private final ImageFilePath imageUtils;
+    private final ImageFilePath imageUtils;
 
-	public ReadableProductVariantGroupMapper(ReadableProductVariantMapper readableProductVariantMapper,
-			ImageFilePath imageUtils) {
-		this.readableProductVariantMapper = readableProductVariantMapper;
-		this.imageUtils = imageUtils;
-	}
+    public ReadableProductVariantGroupMapper(ReadableProductVariantMapper readableProductVariantMapper,
+                                             ImageFilePath imageUtils) {
+        this.readableProductVariantMapper = readableProductVariantMapper;
+        this.imageUtils = imageUtils;
+    }
 
-	@Override
-	public ReadableProductVariantGroup convert(ProductVariantGroup source, StoreMerchantId store,
-			LanguageCode language) {
-		Assert.notNull(source, "productVariantGroup cannot be null");
-		Assert.notNull(store, "store cannot be null");
-		Assert.notNull(language, "Language cannot be null");
-		return this.merge(source, new ReadableProductVariantGroup(), store, language);
-	}
+    @Override
+    public ReadableProductVariantGroup convert(ProductVariantGroup source, StoreMerchantId store,
+                                               LanguageCode language) {
+        return this.merge(source, new ReadableProductVariantGroup(), store, language);
+    }
 
-	@Override
-	public ReadableProductVariantGroup merge(ProductVariantGroup source, ReadableProductVariantGroup destination,
-			StoreMerchantId store, LanguageCode language) {
-		Assert.notNull(source, "productVariantGroup cannot be null");
-		Assert.notNull(store, "store cannot be null");
-		Assert.notNull(language, "Language cannot be null");
-		if (destination == null) {
-			destination = new ReadableProductVariantGroup();
-		}
+    @Override
+    public ReadableProductVariantGroup merge(ProductVariantGroup source, ReadableProductVariantGroup destination,
+                                             StoreMerchantId store, LanguageCode language) {
+        if (destination == null) {
+            destination = new ReadableProductVariantGroup();
+        }
 
-		destination.setId(source.getId());
+        destination.setId(source.getId());
 
-		Set<ProductVariant> instances = source.getProductVariants();
-		destination.setProductVariants(
-				instances.stream().map(i -> this.instance(i, store, language)).collect(Collectors.toList()));
+        Set<ProductVariant> instances = source.getProductVariants();
+        destination.setProductVariants(
+                instances.stream().map(i -> this.instance(i, store, language)).toList());
 
-		// image id should be unique in the list
 
-		Map<Long, ReadableImage> finalList = new HashMap<>();
+        return destination;
+    }
 
-		List<ReadableImage> originalList = source.getImages()
-			.stream()
-			.map(i -> this.image(finalList, i, store, language))
-			.toList();
+    private ReadableProductVariant instance(ProductVariant instance, StoreMerchantId store, LanguageCode language) {
 
-		destination.setImages(new ArrayList<>(finalList.values()));
-
-		return destination;
-	}
-
-	private ReadableProductVariant instance(ProductVariant instance, StoreMerchantId store, LanguageCode language) {
-
-		return readableProductVariantMapper.convert(instance, store, language);
-	}
-
-	private ReadableImage image(Map<Long, ReadableImage> finalList, ProductVariantImage img, StoreMerchantId store,
-			LanguageCode language) {
-		ReadableImage readable = null;
-		if (!finalList.containsKey(img.getId())) {
-			readable = new ReadableImage();
-			readable.setId(img.getId());
-			readable.setImageName(img.getProductImage());
-			readable.setImageUrl(
-					imageUtils.buildCustomTypeImageUtils(store, img.getProductImage(), FileContentType.VARIANT));
-			readable.setDefaultImage(img.isDefaultImage());
-			finalList.put(img.getId(), readable);
-		}
-		return readable;
-	}
+        return readableProductVariantMapper.convert(instance, store, language);
+    }
 
 }
